--- a/Wiki Reader/index.html
+++ b/Wiki Reader/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>WikiPedia Reader</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="site.css">
 </head>
 <body>
- <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script>
 
-var url = 'http://en.wikipedia.org/w/api.php?action=parse&page=google&prop=text&format=json&callback=?';
-//url = 'http://en.wikipedia.org/w/api.php?action=parse&titles=google&prop=text&format=json&callback=?';
+<div class="container-fluid">
 
-(function() {
-  $.getJSON( url, {
-  /*"action": "query",
-	"format": "json",
-	"prop": "revisions",
-	"titles": "Sahil",
-	"rvprop": "content",
-	"Access-Control-Allow-Credentials": "true"*/
-  })
-    .done(function( data ) {
-    	//putWeather(data,unit);
-    	console.log(url);
-      console.log(data);
-    });
-})();
-/*
-  $.getJSON('http://en.wikipedia.org/w/api.php?action=parse&page=google&prop=text&format=json&callback=?', function(json) {
-   /* $('#wikiInfo').html(json.parse.text.*);
-    $("#wikiInfo").find("a:not(.references a)").attr("href", function(){ return "http://www.wikipedia.org" + $(this).attr("href");});
-    $("#wikiInfo").find("a").attr("target", "_blank");
-    console.log(json);
-  });*/
+<div class="text-center text-primary">
+	<a href="index.html"><h1> Wiki Search</h1></a>
+</div>
+
 	
-</script>
+	<div class="form-control col-md-12 form">
+	<h2 class="h2">Search Here</h2>
+		<input type="text" name="search" id="search" class="input">
+		<button type="search" class="btn btn-primary button" id="submit" onclick="search()">Search</button>
+	</div>
+	
+
+<div class="result" id="result">
+	
+</div>
+
+<div class="text-center random">
+	<a href="https://en.wikipedia.org/wiki/Special:Random"><h2>Read A Random Article</h2></a>
+</div>
+
+</div>
+
+
+
+ <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src="site.js"></script>
 </body>
 </html>
