--- a/Weater Map/index.html
+++ b/Weater Map/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Weater Map</title>
+	<title>Weather Map</title>
 	<meta charset="utf-8">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css">
@@ -10,7 +10,7 @@
 <body>
 
 <div class="container-fluid">
-	<div class=" col-xs-12 text-center">Name Of Your CIty
+	<div class=" col-xs-12 text-center">Name Of Your City
 
 		<div class="name" id="name"></div>
 
@@ -19,7 +19,7 @@
 	<div class="map">
 	<div class="row">
 			<div class="col-xs-4">
-			Today's Weater
+			Today's Weather
 			<div class="weather " id="weather">
 				
 			</div>
@@ -30,9 +30,9 @@
 				<div class="row">
 				
 					<div class="col-xs-6">
-					Today's Tempratue
+					Today's Temperature
 						<div class="temp " id="temp">
-							Today's Tempratue
+							Today's Temperature
 						</div>
 					</div>
 
