--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -2,20 +2,35 @@
 <html>
 <head>
 	<title>Calculator</title>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
 
- <div class="calc">
- 	<p class="1">1</p>
- 	<p class="2">2</p>
- 	<p class="3">3</p>
- 	<p class="4">4</p>
- 	<p class="+">+</p>
- 	<p class="-">-</p>
- 	<p class="=">=</p>
+<div class="container">
+	 <div class="calc">
+	 	<p class="dig 1">1</p>
+	 	<p class="dig 2">2</p>
+	 	<p class="dig 3">3</p>
+	 	<p class="dig 4">4</p>
+	 	<p class="dig 5">5</p>
+	 	<p class="dig 6">6</p>
+	 	<p class="dig 7">7</p>
+	 	<p class="dig 8">8</p>
+	 	<p class="dig 9">9</p>
+	 	<p class="dig 0">0</p>
+	 	<p class="op p">+</p>
+	 	<p class="op m">-</p>
+	 	<p class="dig mul">*</p>
+	 	<p class="dig div">/</p>
+	 	<p class="op e">=</p>
+	 	<p class="ac">AC</p>
 
- 	<div class="res"></div>
- </div>
+
+	 	<div class="res" id="res"></div>
+	 </div>
+</div>
+ <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+ <script type="text/javascript" src="site.js"></script>
 
 </body>
 </html>
