--- a/Pomodoro Clock/index.html
+++ b/Pomodoro Clock/index.html
@@ -4,13 +4,43 @@
 	<title>Pomodoro Clock</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="site.css">
+	<meta charset="utf-8">
 </head>
 <body>
+<div class="container">
 
-<div class="clock">
-	
+	<div class="clock" id="clock">
+		
+		<div class="set text-center">
+			
+			<div class=" col-md-6">
+			<h1>Set Minutes</h1><br>
+				<div class="row">
+					<h3 id="mic" onclick="minc()">+</h3><h3 id="mdc" onclick="mdec()">-</h3>
+				</div>
+			</div>
+			
+			<div class=" col-md-6">
+			<h1>Set Seconds</h1><br>
+				<div class="row">
+					<h2 id="mic" onclick="sinc()">+</h2><h2 id="mdc" onclick="sdec()">-</h2>
+				</div>
+			</div>
+		</div>
+		
+		<div class="time text-center">
+			<div class="show-time row">
+				<div class="min unit col-md-4" id="min">25</div><div class="unit">:</div><div id="sec" class="sec unit col-md-4">00</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="buttons row">
+		<button onclick="count()" class="col-md-4 btn btn-primary">Count</button>
+		<button type="button" id="pause" class="pause col-md-4 btn btn-success">Pause</button>
+		<button class="reset col-md-4 btn btn-danger">Reset</button>
+	</div>
 </div>
-
 
 
  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
