--- a/Simon Game/index.html
+++ b/Simon Game/index.html
@@ -2,9 +2,36 @@
 <html>
 <head>
 	<title>Simon Game</title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="site.css">
+	<meta charset="utf-8">
 </head>
 <body>
 
+<div class="container">
+	
+<div class="game">
+	<div class="row text-center">
+		<div class="col-xs-4 red sq 1" id="1"></div>
+		<div class="col-xs-4 blue sq 2" id="2"></div>
+	</div>
+	<div class="row text-center">
+		<div class="col-xs-4 green sq 3" id="3"></div>
+		<div class="col-xs-4 yellow sq 4" id="4"></div>
+	</div>
 
+
+	<div class="row text-center">
+		<button class="btn btn-primary start" id="start">Start</button>
+	</div>
+
+</div>
+
+</div>
+
+
+<script type="text/javascript" src="jquery.min.js"></script>
+<!--<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>-->
+<script src="site.js"></script>
 </body>
 </html>
