--- a/Simon Game/index.html
+++ b/Simon Game/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
 <head>
 	<title>Simon Game</title>
@@ -7,9 +7,10 @@
 	<meta charset="utf-8">
 </head>
 <body>
-
 <div class="container">
 	
+	<h1>Score: <span class="scr" id="scr"></span></h1>
+<center>
 <div class="game">
 	<div class="row text-center">
 		<div class="col-xs-4 red sq 1" id="1"></div>
@@ -19,17 +20,16 @@
 		<div class="col-xs-4 green sq 3" id="3"></div>
 		<div class="col-xs-4 yellow sq 4" id="4"></div>
 	</div>
-
+</center>
 
 	<div class="row text-center">
 		<button class="btn btn-primary start" id="start">Start</button>
+		<button class="strict btn btn-primary">Strict Mode</button>
 	</div>
 
 </div>
 
 </div>
-
-
 <script type="text/javascript" src="jquery.min.js"></script>
 <!--<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>-->
 <script src="site.js"></script>
