--- a/Simon Game/index.html
+++ b/Simon Game/index.html
@@ -9,9 +9,9 @@
 <body>
 <div class="container">
 	
-	<h1>Score: <span class="scr" id="scr"></span></h1>
+	<h1>Score: <span class="scr" id="scr">0</span></h1>
 <center>
-<div class="game">
+<div class="game col-xs-6">
 	<div class="row text-center">
 		<div class="col-xs-4 red sq 1" id="1"></div>
 		<div class="col-xs-4 blue sq 2" id="2"></div>
